--- a/frontend/components/blog/BlogPost.module.css
+++ b/frontend/components/blog/BlogPost.module.css
@@ -21,6 +21,16 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  margin-bottom: 1rem;
+}
+
+.picture {
+  position: relative;
+  flex: 0 0 30%;
+}
+
+.body-text {
+  flex: 0 0 65%;
 }
 
 .long-body {
