--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -1,9 +1,11 @@
 .container {
   padding: 0 2rem;
+  width: 100%;
 }
 
 .main {
   min-height: 100vh;
+  color: #372c2e;
   padding: 4rem 0;
   flex: 1;
   display: flex;
@@ -12,20 +14,8 @@
   align-items: center;
 }
 
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
+.main h3 {
+  color: #de9e48;
 }
 
 .title a {
