--- a/frontend/components/layout/AppLayout.module.css
+++ b/frontend/components/layout/AppLayout.module.css
@@ -33,3 +33,20 @@
   margin: auto;
   cursor: pointer;
 }
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  padding: 2rem 0;
+  border-top: 1px solid #eaeaea;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+}
