--- a/frontend/components/UI/ImageCard.module.css
+++ b/frontend/components/UI/ImageCard.module.css
@@ -3,12 +3,12 @@
   border: 1px solid white;
   border-radius: 4px;
   background-color: white;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.103);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.137);
   flex: 1 1 auto;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin: 1rem auto;
+  margin: 4rem auto;
 }
 
 .image-section {
@@ -25,4 +25,15 @@
   padding: 2rem 0 2rem 0;
   color: #372c2e;
   text-align: center;
+}
+
+.small {
+  max-width: 250px;
+  margin: 1rem auto;
+  border-radius: 8px;
+  padding: 2rem;
+}
+
+.small img {
+  border-radius: 50%;
 }
