--- a/frontend/components/UI/Card.module.css
+++ b/frontend/components/UI/Card.module.css
@@ -1,7 +1,8 @@
 .card {
   width: 90%;
+  max-width: 500px;
   border: 1px solid white;
-  border-radius: 4px;
+  border-radius: 8px;
   background-color: white;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.103);
   flex: 1 1 auto;
