--- a/frontend/components/UI/Card.module.css
+++ b/frontend/components/UI/Card.module.css
@@ -36,6 +36,14 @@
   margin: 1rem auto 2rem auto;
 }
 
+.card h4 {
+  text-align: center;
+  font-size: 1rem;
+  color: #372c2e;
+  padding: 0;
+  margin: 1rem;
+}
+
 .card span {
   text-align: left;
   color: #372c2e;
@@ -61,4 +69,9 @@
 
 .half {
   min-height: 40vh;
+}
+
+.flex {
+  flex: 0 0 49%;
+  margin: 2rem 0;
 }
