--- a/frontend/styles/Admin.module.css
+++ b/frontend/styles/Admin.module.css
@@ -23,6 +23,14 @@
   display: flex;
   flex-direction: row;
   margin-bottom: 1rem;
+  cursor: pointer;
+  user-select: none;
+  transition: all 0.2s;
+  padding: 1rem;
+}
+
+.inquiries-list li:hover {
+  background-color: #fff0dd;
 }
 
 .column {
