--- a/frontend/components/blog/BlogPost.module.css
+++ b/frontend/components/blog/BlogPost.module.css
@@ -5,6 +5,7 @@
 .body {
   display: flex;
   flex-direction: column;
+  padding: 0 1rem;
 }
 
 .body section {
@@ -17,6 +18,9 @@
   color: grey;
 }
 
+.body img {
+  border-radius: 4px;
+}
 .text-picture-container {
   display: flex;
   flex-direction: row;
@@ -31,10 +35,16 @@
 
 .body-text {
   flex: 0 0 65%;
+  padding: 1rem;
 }
 
 .long-body {
   height: auto;
-  min-height: 400px;
+  min-height: 200px;
   overflow: auto;
+  margin-top: 2rem;
+}
+
+.single-picture {
+  position: relative;
 }
