--- a/frontend/components/UI/input/FormInput.module.css
+++ b/frontend/components/UI/input/FormInput.module.css
@@ -23,3 +23,20 @@
   height: 200px;
   padding: 1rem;
 }
+
+.file {
+  opacity: 0;
+  width: 0.1px;
+  height: 0.1px;
+  position: absolute;
+}
+
+.file-label {
+  background-color: white;
+  border: 1px solid rgb(214, 214, 214);
+  border-radius: 8px;
+  width: 80%;
+  text-align: center;
+  padding: 0.5rem 1rem;
+  margin: 0 auto;
+}
