--- a/frontend/components/blog/BlogPost.module.css
+++ b/frontend/components/blog/BlogPost.module.css
@@ -8,12 +8,6 @@
   padding: 0 1rem;
 }
 
-.body section {
-  padding-bottom: 1rem;
-  height: 80px;
-  overflow: hidden;
-}
-
 .body small {
   color: grey;
 }
@@ -36,6 +30,25 @@
 .body-text {
   flex: 0 0 65%;
   padding: 1rem;
+  padding-bottom: 1rem;
+  height: 150px;
+  position: relative;
+}
+
+.text-container {
+  height: 100%;
+  overflow: hidden;
+}
+
+.fade {
+  bottom: 0;
+  height: 150px;
+  background: linear-gradient(
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 1) 100%
+  );
+  position: absolute;
+  width: 100%;
 }
 
 .long-body {
@@ -76,7 +89,4 @@
   width: 100% !important;
   position: relative !important;
   height: unset !important;
-
 }
-
-
