--- a/frontend/src/pages/blog/index.astro
+++ b/frontend/src/pages/blog/index.astro
@@ -1,9 +1,8 @@
 ---
 import BlogList from "@components/blog/BlogList";
 import Layout from "src/layouts/Layout.astro";
-
 ---
 
 <Layout>
-  <BlogList client:load></BlogList>
+  <BlogList client:load path={`${import.meta.env.NEXT_PUBLIC_API_URI}/posts`} />
 </Layout>
