fix sent page logic

--- a/frontend/src/pages/inquiry/sent.astro
+++ b/frontend/src/pages/inquiry/sent.astro
@@ -1,17 +1,20 @@
 ---
 import Card from "@components/UI/Card";
 import Layout from "src/layouts/Layout.astro";
-
-const searchParams = new URLSearchParams(window.location.search);
-const id = searchParams.get("inquiry-id");
 ---
 
 <Layout>
   <Card>
     <h1>お問い合わせありがとうございます。</h1>
-    <h3>
-      お問合せを受け付けました。 <br />
-      整理番号は{id}。
-    </h3>
+    <h3>お問合せを受け付けました。<br /><section id="no"></section></h3>
   </Card>
 </Layout>
+
+<script>
+  const searchParams = new URLSearchParams(window.location.search);
+  const id = searchParams.get("inquiry-id");
+  const inquiryNoElement =
+    /** @type {HTMLHeadingElement!} */ document.querySelector("section#no");
+  if (!inquiryNoElement) throw Error();
+  inquiryNoElement.textContent = `整理番号は ${id}番。`;
+</script>
