--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -1,15 +1,17 @@
 ---
+import ImageCard from "@components/UI/ImageCard";
+import Card from "@components/UI/Card";
+import LifeCycle from "@components/index/LifeCycle";
+import InquiryFooter from "@components/index/InquiryFooter";
+
 import styles from "../../styles/Home.module.css";
-import ImageCard from "../components/UI/ImageCard";
-import Card from "../components/UI/Card";
-import LifeCycle from "../components/index/LifeCycle";
-import InquiryFooter from "../components/index/InquiryFooter";
 
 import logo from "/images/original.jpg";
 import mame from "/images/mame.jpg";
 import coffee from "/images/coffee.jpg";
 import art from "/images/art.jpg";
 import Layout from "../layouts/Layout.astro";
+
 
 const coeText =
   "カップ・オブ・エクセレンス（英語：Cup of Excellence、略称：CoE）はコーヒーの品質審査制度。カップ・オブ・エクセレンスはコーヒー界のアカデミー賞（オスカー）とも例えられる。コーヒーの審査は少なくとも毎回5回行われ、最終的な勝者は「カップ・オブ・エクセレンス」を冠される。";
