make nav bar static

--- a/frontend/src/layouts/Layout.astro
+++ b/frontend/src/layouts/Layout.astro
@@ -11,7 +11,7 @@ import { NavBar } from "../components/lit-components/nav-bar";
     <title>沖縄コーヒー農園 Pace</title>
   </head>
   <body>
-    <NavBar client:load />
+    <NavBar />
     <main class={styles.feed}>
       <slot />
     </main>
