--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -1,8 +1,6 @@
 ---
 import { ImageCard } from "@components/lit-components/image-card";
 import Card from "@components/UI/Card";
-import LifeCycle from "@components/index/LifeCycle";
-import InquiryFooter from "@components/index/InquiryFooter";
 
 import styles from "../../styles/Home.module.css";
 
@@ -10,6 +8,9 @@ import logo from "/images/original.jpg";
 import mame from "/images/mame.jpg";
 import coffee from "/images/coffee.jpg";
 import art from "/images/art.jpg";
+import nae from "../../public/images/nae.jpg";
+import flower from "../../public/images/flower.jpg";
+import plant from "../../public/images/plant.jpg";
 import Layout from "../layouts/Layout.astro";
 
 const coeText =
@@ -43,8 +44,39 @@ const coeText =
       </h2>
       <span>{coeText}</span>
     </Card>
-    <LifeCycle />
-    <InquiryFooter />
+    <div class={styles["life-cycle"]}>
+      <h1>コーヒーの木の成長過程</h1>
+      <div class={styles["row-wrap"]}>
+        <div class={styles["wrap-child"]}>
+          <ImageCard client:visible data-src={nae} class-name="small">
+            コーヒーはパーチメント付きのコーヒーの種子を発芽用のポットに植えます。種植えしてから約２ヶ月で発芽します。本葉が出てきたら植え替えをします。
+          </ImageCard>
+        </div>
+        <div class={styles["wrap-child"]}>
+          <ImageCard client:visible data-src={flower} class-name="small">
+            植付けから最初の開花まで、早いところでは18ヶ月、遅くても30ヶ月かかります。最初の花は、幼木なので、数も僅かです。
+            開花は、一斉に起こるわけでなく、約4ヶ月の間に5〜7回に分けて開花します。
+          </ImageCard>
+        </div>
+        <div class={styles["wrap-child"]}>
+          <ImageCard client:visible data-src={plant} class-name="small">
+            コーヒーの苗は、1年ほどポットで栽培し、その後、路地植えをします。成木になるには、沖縄では、約3〜5年かかります。
+          </ImageCard>
+        </div>
+        <div class={styles["wrap-child"]}>
+          <ImageCard client:visible data-src={mame} class-name="small">
+            開花した花の約8割が結実します。結実すると花弁が落ち、小さな胡椒の実のような実が茎の先に見られるようになります。気象条件などで変わりますが、開花から約8ヶ月かけて徐々に大きくなり、完熟豆に成長します。
+          </ImageCard>
+        </div>
+      </div>
+    </div>
+    <div class={styles["inquiry"]}>
+      <h1>お問い合わせ</h1>
+
+      <a href="/inquiry" style={{ color: "white", backgroundColor: "#372c2e" }}>
+        お問い合せはこちら
+      </a>
+    </div>
   </div>
 </Layout>
 
