--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -30,3 +30,57 @@
   cursor: pointer;
   user-select: none;
 }
+
+.life-cycle {
+  margin: 5rem auto;
+  min-height: 100vh;
+  color: #372c2e;
+}
+
+.life-cycle h1 {
+  text-align: center;
+  padding-bottom: 1rem;
+  border-bottom: 2px solid #372c2e63;
+}
+
+.row-wrap {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.wrap-child {
+  margin: 0 auto;
+}
+
+.inquiry {
+  display: flex;
+  flex-direction: column;
+  margin: 8rem auto;
+}
+
+.inquiry h1 {
+  text-align: center;
+  padding-bottom: 1rem;
+  border-bottom: 2px solid #372c2e63;
+}
+
+.inquiry a {
+  color: white;
+  background-color: #372c2e;
+  border: 1px solid #372c2e;
+  border-radius: 8px;
+  width: 80%;
+  margin: 2rem auto 2rem auto;
+  text-align: center;
+  padding: 2rem 0;
+  cursor: pointer;
+  user-select: none;
+}
+
+.inquiry a:hover {
+  background-color: #563727;
+  border: 1px solid #563727;
+}
+
