fix inquiry footer

--- a/frontend/src/pages/about/index.astro
+++ b/frontend/src/pages/about/index.astro
@@ -1,5 +1,5 @@
 ---
-import InquiryFooter from "../../components/index/InquiryFooter";
+import { InquiryFooter } from "@components/lit-components/inquiry-footer";
 import Card from "../../components/UI/Card";
 import Layout from "../../layouts/Layout.astro";
 ---
@@ -35,5 +35,5 @@ import Layout from "../../layouts/Layout.astro";
       >コーヒーベルトにあるとはいえ、台風による強風、塩害など、沖縄だからこそある問題がたくさんあります。それに挑戦して、栽培に成功したのが我が園長。</span
     >
   </Card>
-  <InquiryFooter />
+  <InquiryFooter></InquiryFooter>
 </Layout>
