--- a/frontend/src/pages/blog/[id].astro
+++ b/frontend/src/pages/blog/[id].astro
@@ -10,7 +10,7 @@ export async function getStaticPaths() {
 
   return data.map(post => {
     return {
-      params: { id: post.id },
+      params: { id: String(post.id) },
       props: { post },
     };
   });
