fix astro lazy load bug

--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -25,13 +25,13 @@ const coeText =
       <h1>沖縄県産コーヒー農園、Pace</h1>
       <h3>コーヒーを通してすべての人に、へいあんを。</h3>
     </div>
-    <ImageCard client:visible data-src={mame}>
+    <ImageCard client:load data-src={mame}>
       沖縄県のやんばるでコーヒーの栽培を行っています。
     </ImageCard>
-    <ImageCard client:visible data-src={coffee}
+    <ImageCard client:load data-src={coffee}
       >コーヒー豆の加工・販売を行っています。</ImageCard
     >
-    <ImageCard client:visible data-src={art}
+    <ImageCard client:load data-src={art}
       >障がい者の働く場を提供します。</ImageCard
     >
     <Card>
@@ -49,23 +49,23 @@ const coeText =
       <h1>コーヒーの木の成長過程</h1>
       <div class={styles["row-wrap"]}>
         <div class={styles["wrap-child"]}>
-          <ImageCard client:visible data-src={nae} class-name="small">
+          <ImageCard client:load data-src={nae} class-name="small">
             コーヒーはパーチメント付きのコーヒーの種子を発芽用のポットに植えます。種植えしてから約２ヶ月で発芽します。本葉が出てきたら植え替えをします。
           </ImageCard>
         </div>
         <div class={styles["wrap-child"]}>
-          <ImageCard client:visible data-src={flower} class-name="small">
+          <ImageCard client:load data-src={flower} class-name="small">
             植付けから最初の開花まで、早いところでは18ヶ月、遅くても30ヶ月かかります。最初の花は、幼木なので、数も僅かです。
             開花は、一斉に起こるわけでなく、約4ヶ月の間に5〜7回に分けて開花します。
           </ImageCard>
         </div>
         <div class={styles["wrap-child"]}>
-          <ImageCard client:visible data-src={plant} class-name="small">
+          <ImageCard client:load data-src={plant} class-name="small">
             コーヒーの苗は、1年ほどポットで栽培し、その後、路地植えをします。成木になるには、沖縄では、約3〜5年かかります。
           </ImageCard>
         </div>
         <div class={styles["wrap-child"]}>
-          <ImageCard client:visible data-src={mame} class-name="small">
+          <ImageCard client:load data-src={mame} class-name="small">
             開花した花の約8割が結実します。結実すると花弁が落ち、小さな胡椒の実のような実が茎の先に見られるようになります。気象条件などで変わりますが、開花から約8ヶ月かけて徐々に大きくなり、完熟豆に成長します。
           </ImageCard>
         </div>
