get rid of api-path references in all pages for admin-nav bar

--- a/frontend/src/pages/admin/index.astro
+++ b/frontend/src/pages/admin/index.astro
@@ -5,7 +5,7 @@ import Layout from "src/layouts/Layout.astro";
 ---
 
 <Layout>
-  <AdminNavBar api-path={import.meta.env.NEXT_PUBLIC_API_URI} client:load />
+  <AdminNavBar client:load />
   <h1 class="title">管理画面</h1>
 
   <Card>
