--- a/frontend/src/pages/admin/login.astro
+++ b/frontend/src/pages/admin/login.astro
@@ -6,6 +6,6 @@ import Layout from "src/layouts/Layout.astro";
 
 <Layout>
   <Card>
-    <LoginForm api-path={import.meta.env.NEXT_PUBLIC_API_URI} client:load />
+    <LoginForm client:load />
   </Card>
 </Layout>
