--- a/frontend/src/pages/inquiry/sent.astro
+++ b/frontend/src/pages/inquiry/sent.astro
@@ -6,7 +6,10 @@ import Layout from "src/layouts/Layout.astro";
 <Layout>
   <Card>
     <h1>お問い合わせありがとうございます。</h1>
-    <h3>お問合せを受け付けました。<br /><section id="no"></section></h3>
+    <h3>
+      お問合せを受け付けました。<br />整理番号は<br /><section id="no">
+      </section>
+    </h3>
   </Card>
 </Layout>
 
@@ -16,5 +19,5 @@ import Layout from "src/layouts/Layout.astro";
   const inquiryNoElement =
     /** @type {HTMLHeadingElement!} */ document.querySelector("section#no");
   if (!inquiryNoElement) throw Error();
-  inquiryNoElement.textContent = `整理番号は ${id}番。`;
+  inquiryNoElement.textContent = id;
 </script>
