--- a/frontend/src/pages/blog/index.astro
+++ b/frontend/src/pages/blog/index.astro
@@ -1,10 +1,10 @@
 ---
-import BlogList from "@components/blog/BlogList";
+import { BlogPostController } from "@components/lit-components/blog-post-controller";
 import { InquiryFooter } from "@components/lit-components/inquiry-footer";
 import Layout from "src/layouts/Layout.astro";
 ---
 
 <Layout>
-  <BlogList client:load path={import.meta.env.NEXT_PUBLIC_API_URI} />
+  <BlogPostController client:load></BlogPostController>
   <InquiryFooter></InquiryFooter>
 </Layout>
