format all files

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -71,7 +71,7 @@ const coeText =
         </div>
       </div>
     </div>
-    <InquiryFooter></InquiryFooter>
+    <InquiryFooter />
   </div>
 </Layout>
 
