--- a/src/pages/admin/blog/edit.astro
+++ b/src/pages/admin/blog/edit.astro
@@ -9,9 +9,6 @@ import Layout from "src/layouts/Layout.astro";
   <AdminNavBar client:load />
   <Card className="wide">
     <h4>新規投稿</h4>
-    <EditPostForm
-      api-path={import.meta.env.NEXT_PUBLIC_API_URI}
-      client:load
-    />
+    <EditPostForm api-path={import.meta.env.NEXT_PUBLIC_API_URI} client:load />
   </Card>
 </Layout>
