--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -5,6 +5,6 @@ import Layout from "src/layouts/Layout.astro";
 ---
 
 <Layout>
-  <BlogPostController client:load></BlogPostController>
-  <InquiryFooter></InquiryFooter>
+  <BlogPostController client:load />
+  <InquiryFooter />
 </Layout>
