--- a/src/pages/inquiry/index.astro
+++ b/src/pages/inquiry/index.astro
@@ -4,5 +4,8 @@ import InquiryPage from "@components/inquiry/InquiryPage";
 ---
 
 <Layout>
-  <InquiryPage client:load path={`${import.meta.env.NEXT_PUBLIC_API_URI}/inquiries/new`} />
+  <InquiryPage
+    client:load
+    path={`${import.meta.env.NEXT_PUBLIC_API_URI}/inquiries/new`}
+  />
 </Layout>
