--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import Layout from "../layouts/Layout.astro";
 import { InquiryFooter } from "@components/lit-components/inquiry-footer";
 
 const coeText =
-  "カップ・オブ・エクセレンス（英語：Cup of Excellence、略称：CoE）はコーヒーの品質審査制度。カップ・オブ・エクセレンスはコーヒー界のアカデミー賞（オスカー）とも例えられる。コーヒーの審査は少なくとも毎回5回行われ、最終的な勝者は「カップ・オブ・エクセレンス」を冠される。";
+  "スペシャリティコーヒーは市場に流通しているコーヒーのわずか５％ほどであり、味がおいしいだけでなく、コーヒーの豆（種子）からカップまでの総ての段階において一貫した体制・工程・品質管理が徹底していることが必須であるとされています。つまり、私たちは、美味しいだけでなく、安全・安心なコーヒー生産を目指します。また、コーヒーは地球環境との関わりが懸念されています。我々は、SDG’sを念頭に置いたコーヒー生産を心がけていきたいと思います。そして、私たちの理念でもある「コーヒーを通してすべての人にへいあん」を実践していきます。";
 ---
 
 <Layout>
@@ -35,14 +35,8 @@ const coeText =
       >障がい者の働く場を提供します。</ImageCard
     >
     <Card>
-      <h1>我々の挑戦</h1>
-      <h2>
-        沖縄産コーヒーで
-        <br />
-        スペシャリティコーヒー
-        <br />
-        を目指します
-      </h2>
+      <h1>スペシャリティコーヒー</h1>
+      <h2>我々はスペシャリティコーヒー認証農園を目指します。</h2>
       <span>{coeText}</span>
     </Card>
     <div class={styles["life-cycle"]}>
