format COE text better

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,8 +14,7 @@ import plant from "../../public/images/plant.jpg";
 import Layout from "../layouts/Layout.astro";
 import { InquiryFooter } from "@components/lit-components/inquiry-footer";
 
-const coeText =
-  "スペシャリティコーヒーは市場に流通しているコーヒーのわずか５％ほどであり、味がおいしいだけでなく、コーヒーの豆（種子）からカップまでの総ての段階において一貫した体制・工程・品質管理が徹底していることが必須であるとされています。つまり、私たちは、美味しいだけでなく、安全・安心なコーヒー生産を目指します。また、コーヒーは地球環境との関わりが懸念されています。我々は、SDG’sを念頭に置いたコーヒー生産を心がけていきたいと思います。そして、私たちの理念でもある「コーヒーを通してすべての人にへいあん」を実践していきます。";
+const coeText = "";
 ---
 
 <Layout>
@@ -37,7 +36,15 @@ const coeText =
     <Card>
       <h1>スペシャリティコーヒー</h1>
       <h2>我々はスペシャリティコーヒー認証農園を目指します。</h2>
-      <span>{coeText}</span>
+      <p>
+        スペシャリティコーヒーは市場に流通しているコーヒーのわずか５％ほどであり、味がおいしいだけでなく、コーヒーの豆（種子）からカップまでの総ての段階において一貫した体制・工程・品質管理が徹底していることが必須であるとされています。
+      </p>
+      <p>
+        つまり、私たちは、美味しいだけでなく、安全・安心なコーヒー生産を目指します。また、コーヒーは地球環境との関わりが懸念されています。
+      </p>
+      <p>
+        我々は、SDG’sを念頭に置いたコーヒー生産を心がけていきたいと思います。そして、私たちの理念でもある「コーヒーを通してすべての人にへいあん」を実践していきます。
+      </p>
     </Card>
     <div class={styles["life-cycle"]}>
       <h1>コーヒーの木の成長過程</h1>
