fix speciality coffee header break

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,7 +34,7 @@ const coeText = "";
       >障がい者の働く場を提供します。</ImageCard
     >
     <Card>
-      <h1>スペシャリティコーヒー</h1>
+      <h1>スペシャリティ<br />コーヒー</h1>
       <h2>我々はスペシャリティコーヒー認証農園を目指します。</h2>
       <p>
         スペシャリティコーヒーは市場に流通しているコーヒーのわずか５％ほどであり、味がおいしいだけでなく、コーヒーの豆（種子）からカップまでの総ての段階において一貫した体制・工程・品質管理が徹底していることが必須であるとされています。
